--- a/index.html
+++ b/index.html
@@ -12,28 +12,7 @@
 
 
 <body>
-<!--
-<div class="ui borderless menu" style="background-color: #f7f7f7; box-shadow: none; border: none">
-    <div class="ui container">
-        <a class="fitted item"><i class="facebook f icon"></i></a>
-        <a class="fitted item"><i class="twitter icon"></i></a>
-        <a class="fitted item"><i class="pinterest p icon"></i></a>
-        <a class="fitted item"><i class="instagram icon"></i></a>
-        <a class="fitted right item"><i class="home icon"></i></a>
-        <a class="fitted item"><i class="search icon"></i></a>
-        <a class="fitted item"><i class="user icon"></i></a>
-        <div class="ui simple dropdown fitted item">
-            <div class="text">MY CART<i class="shop icon"></i> 0</div>
-            <i class="dropdown icon"></i>
-            <div class="menu">
-                <div class="item">My cart is currently empty</div>
-            </div>
-        </div>
-    </div>
-</div>
--->
-
-<div class="ui borderless menu container" style="box-shadow: none; border: none; padding-top: 1em">
+<div class="ui borderless menu first container">
     <img class="ui left fitted image" src="http://murphyshawaii.com/media/2014/04/murphyshawaii.png">
     <div class="ui centered grid container">
         <div class="ui right item">
@@ -44,9 +23,9 @@
             <div class="text">About Us</div>
             <i class="dropdown icon"></i>
             <div class="menu">
-                <div class="fitted text">Getting Here/Parking</div>
-                <div class="fitted text">Catering and Private Events</div>
-                <div class="fitted text">Upcoming Events</div>
+                <div class="item">Getting Here/Parking</div>
+                <div class="item">Catering and Private Events</div>
+                <div class="item">Upcoming Events</div>
             </div>
         </div>
 
@@ -56,10 +35,10 @@
             <div class="text">Menus</div>
             <i class="dropdown icon"></i>
             <div class="menu">
-                <div class="text">Weekly Specials</div>
-                <div class="text">Lunch Menu</div>
-                <div class="text">Dinner Menu</div>
-                <div class="text">Dessets</div>
+                <div class="item">Weekly Specials</div>
+                <div class="item">Lunch Menu</div>
+                <div class="item">Dinner Menu</div>
+                <div class="item">Dessets</div>
             </div>
         </div>
 
@@ -71,15 +50,21 @@
 </div>
 
 <div class="middle">
-    <div class="ui two column grid container">
-        <div class="column" style="padding-top: 150px"><img class="ui left fitted image" src="http://murphyshawaii.com/media/2014/04/murphyshawaiilogo.png"></div>
-        <div class="column" style="color: white; font-size: 13pt; padding-top: 200px">
-            A Traditional downtown saloon and eatery located in the Honolulu Financial District, just one block off the waterfront, Murphy's has been a haven for mariners, businessmen and locals since 1891.
+    <div class="ui middle aligned grid container" style="height: 500px">
+        <div class="ui two column row">
+            <div class="column">
+                <img class="ui left image" src="http://murphyshawaii.com/media/2014/04/murphyshawaiilogo.png">
+            </div>
+            <div class="column">
+                A Traditional downtown saloon and eatery located in the Honolulu Financial District, just one block off
+                the
+                waterfront, Murphy's has been a haven for mariners, businessmen and locals since 1891.
+            </div>
         </div>
     </div>
 </div>
 
-<div style="padding-top: 2em; padding-bottom: 2em; background-color: dimgrey; color: white">
+<div class="test">
     <div class="ui three column grid container">
         <div class="column">
             Lunch
